# sensor_sim

./: CMakeLists.txt  READ.ME  README.md  build.sh
src/: config.h  main.cpp
src/platform/: circular_buffer.h  platform.cpp  platform.h
src/sensor/: dummy_sensor.cpp  dummy_sensor.h  sensor.cpp  sensor.h  sensor_bak.cpp  sensor_bak.h
src/utils/: logger.cpp  logger.h
